--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ yarn_mappings=1.20.2+build.1
 loader_version=0.14.22
 
 # Mod Properties
-mod_version=1.2.1
+mod_version=1.2.2
 maven_group=net.frostbyte.inventory
 archives_base_name=inventory
 
 # Dependencies
 fabric_version=0.89.2+1.20.2
+modmenu_version=8.0.0
