--- a/run/config/fabric/indigo-renderer.properties
+++ b/run/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Mon Oct 16 17:52:38 EDT 2023
+#Fri Dec 08 22:11:44 EST 2023
 fix-mean-light-calculation=auto
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
