--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.1
-loader_version=0.14.22
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.1
+loader_version=0.15.1
 
 # Mod Properties
-mod_version=1.2.2
+mod_version=1.4.0
 maven_group=net.frostbyte.inventory
 archives_base_name=inventory
 
 # Dependencies
-fabric_version=0.89.2+1.20.2
-modmenu_version=8.0.0
+fabric_version=0.91.2+1.20.4
+modmenu_version=9.0.0-pre.1
