--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.4
-yarn_mappings=1.20.4+build.1
-loader_version=0.15.1
+minecraft_version=1.20.5
+yarn_mappings=1.20.5+build.1
+loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.6.1
+mod_version=1.7.0
 maven_group=net.frostbyte.inventory
 archives_base_name=inventory
 
 # Dependencies
-fabric_version=0.91.2+1.20.4
-modmenu_version=9.0.0-pre.1
+fabric_version=0.97.5+1.20.5
+modmenu_version=10.0.0-beta.1
