--- a/run/config/fabric/indigo-renderer.properties
+++ b/run/config/fabric/indigo-renderer.properties
@@ -1,9 +1,9 @@
 #Indigo properties file
-#Tue Jan 16 22:07:57 EST 2024
-fix-mean-light-calculation=auto
+#Thu Apr 25 15:26:43 EDT 2024
+always-tesselate-blocks=auto
+ambient-occlusion-mode=hybrid
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
-ambient-occlusion-mode=hybrid
-always-tesselate-blocks=auto
-fix-smooth-lighting-offset=auto
 fix-luminous-block-ambient-occlusion=auto
+fix-mean-light-calculation=auto
+fix-smooth-lighting-offset=auto
