--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ group = project.maven_group
 
 repositories {
 	maven { url "https://maven.terraformersmc.com/releases/" }
-
+	maven {url 'https://maven.isxander.dev/releases'}
 }
 
 dependencies {
@@ -27,6 +27,7 @@ dependencies {
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
 	modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modImplementation("dev.isxander:yet-another-config-lib:${project.yacl_version}")
 }
 
 processResources {
