--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,11 @@ yarn_mappings=1.20.6+build.1
 loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.7.6
+mod_version=1.8.0
 maven_group=net.frostbyte.inventory
 archives_base_name=inventory
 
 # Dependencies
 fabric_version=0.97.8+1.20.6
 modmenu_version=10.0.0-beta.1
+yacl_version=3.4.2+1.20.5-fabric
