--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version = 1.21.4
-yarn_mappings = 1.21.4+build.2
-loader_version = 0.16.9
+minecraft_version = 1.21.5
+yarn_mappings = 1.21.5+build.1
+loader_version = 0.16.13
 
 # Mod Properties
-mod_version = 1.10.5
+mod_version = 1.11.0
 maven_group = net.frostbyte.inventory
 archives_base_name = inventory
 
 # Dependencies
-fabric_version = 0.112.2+1.21.4
-modmenu_version = 13.0.0-beta.1
-yacl_version = 3.6.2+1.21.4-fabric
+fabric_version = 0.119.9+1.21.5
+modmenu_version = 14.0.0-rc.2
+yacl_version = 3.6.6+1.21.5-fabric
