--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version = 1.21.5
-yarn_mappings = 1.21.5+build.1
+minecraft_version = 1.21.6
+yarn_mappings = 1.21.6+build.1
 loader_version = 0.16.14
 
 # Mod Properties
-mod_version = 1.11.3
+mod_version = 1.12.0
 maven_group = net.frostbyte.inventory
 archives_base_name = inventory
 
 # Dependencies
-fabric_version = 0.123.0+1.21.5
-modmenu_version = 14.0.0-rc.2
-yacl_version = 3.6.6+1.21.5-fabric
+fabric_version = 0.127.0+1.21.6
+modmenu_version = 15.0.0-beta.2
+yacl_version = 3.7.1+1.21.6-fabric
