--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version = 1.21.7
-yarn_mappings = 1.21.7+build.4
-loader_version = 0.16.14
+minecraft_version = 1.21.10
+yarn_mappings = 1.21.10+build.2
+loader_version = 0.17.3
 
 # Mod Properties
-mod_version = 1.12.6
+mod_version = 1.12.7
 maven_group = net.frostbyte.inventory
 archives_base_name = inventory
 
 # Dependencies
-fabric_version = 0.128.2+1.21.7
-modmenu_version = 15.0.0-beta.3
-yacl_version = 3.7.1+1.21.6-fabric
+fabric_version = 0.135.0+1.21.10
+modmenu_version = 16.0.0-rc.1
+yacl_version = 3.8.0+1.21.9-fabric
