--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version = 1.21.10
-yarn_mappings = 1.21.10+build.2
-loader_version = 0.17.3
+minecraft_version = 1.21.11
+yarn_mappings = 1.21.11+build.3
+loader_version = 0.18.2
 
 # Mod Properties
-mod_version = 1.12.8
+mod_version = 1.12.9
 maven_group = net.frostbyte.inventory
 archives_base_name = inventory
 
 # Dependencies
-fabric_version = 0.135.0+1.21.10
-modmenu_version = 16.0.0-rc.1
-yacl_version = 3.8.0+1.21.9-fabric
+fabric_version = 0.139.5+1.21.11
+modmenu_version = 17.0.0-alpha.1
+yacl_version = 3.8.1+1.21.11-fabric
