--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version = 1.21.10
-yarn_mappings = 1.21.10+build.2
-loader_version = 0.17.3
+minecraft_version = 1.20.1
+yarn_mappings = 1.20.1+build.10
+loader_version = 0.18.2
 
 # Mod Properties
 mod_version = 1.12.8
@@ -14,6 +14,6 @@ maven_group = net.frostbyte.inventory
 archives_base_name = inventory
 
 # Dependencies
-fabric_version = 0.135.0+1.21.10
-modmenu_version = 16.0.0-rc.1
-yacl_version = 3.8.0+1.21.9-fabric
+fabric_version = 0.92.6+1.20.1
+modmenu_version = 7.2.2
+yacl_version = 3.6.6+1.20.1-fabric
